tests/lean/invalidNamedArgs.lean.expected.out
invalidNamedArgs.lean:3:9-3:17: error: Invalid argument name `b` for function `List.foldl`

Note: This function has the following named parameters: `α`, `β`, `f`, and `init`
invalidNamedArgs.lean:9:4-9:18: error: Invalid argument name `flg` for function `f`

Note: This function has the following named parameters: `a` and `flag`
invalidNamedArgs.lean:20:22-20:30: error: Invalid argument name `k` for function `h`

Note: This function has the following named parameters: `n` and `x`
invalidNamedArgs.lean:21:23-21:31: error: Invalid argument name `k` for function `h`

Note: This function has the following named parameters: `n` and `y`
invalidNamedArgs.lean:22:13-22:21: error: Invalid argument name `k` for function `h`

Note: This function has the following named parameters: `n`
